--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 #Showing data
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.eclipselink.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
